conexion del login con firebase

--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "triodinamico" "\0"
+            VALUE "FileDescription", "crud_firebase" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "triodinamico" "\0"
+            VALUE "InternalName", "crud_firebase" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2022 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "triodinamico.exe" "\0"
-            VALUE "ProductName", "triodinamico" "\0"
+            VALUE "OriginalFilename", "crud_firebase.exe" "\0"
+            VALUE "ProductName", "crud_firebase" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
