--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -48,8 +48,8 @@ android {
         applicationId "com.example.triodinamico"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
-        minSdkVersion 19
-        targetSdkVersion 30
+        minSdkVersion 21// flutter.minSdkVersion ---> 21
+        targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
