--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "triodinamico",
-    "short_name": "triodinamico",
+    "name": "crud_firebase",
+    "short_name": "crud_firebase",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
